css for images now works

--- a/lgbt_friendly_resources.html
+++ b/lgbt_friendly_resources.html
@@ -4,6 +4,26 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Worldwide Trans Resources</title>
+<style>
+.flexbox {
+    display: flex;
+    justify-content: space-between;
+}
+.box2 {
+    width: 50%;
+}
+@media (max-aspect-ratio: 1/1) {
+    .flexbox {
+        flex-direction: column;
+        align-items: center;
+    }
+    .box2 {
+        display: block;
+        width: 80%;
+        margin: auto;
+    }
+}
+</style>
     </head>
     <body>
 <h1>Finding an LGBT friendly resource</h1>
