adjusted footer and fixed tag on periods

--- a/social_transitioning.html
+++ b/social_transitioning.html
@@ -367,20 +367,20 @@
     </li>
 </ul>
 
-<div style="border-style: solid; boder-width: 1%"></div
+<div style="border-style: solid; boder-width: 1%"></div>
 
 <p style="text-align: center;">
     Want to add something here? <br>
     Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
-    Let @Add | <code>add_gaming</code> know on Discord!
+    Let @Add know on <a href="discordapp.com/users/245579273052749825">Discord</a> or <a href="https://x.com/AddGaming2">Twitter</a>!
 </p>
 <p style="text-align: center;">
     Disclaimer: <br>
-    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
-    Any products/companies we list don't reflect Trans Academy as a whole. 
+    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts. 
+    Any products/companies are just suggestions, use discretion. 
     Please use your own discretion and research with any advice listed. 
-    Always seek the advice of your qualified health care provider regarding any medical questions. 
+    Always seek the advice of your qualified health care provider regarding any medical questions.
 </p>
     </body>
 </html>
