--- a/pregnancy_and_parenting.html
+++ b/pregnancy_and_parenting.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
-        <title>Worldwide Trans Resources</title>
+        <title>Worldwide LGBT Resources</title>
 <style>
 .flexbox {
     display: flex;
