pregnancy section linked

--- a/pages/index.html
+++ b/pages/index.html
@@ -477,31 +477,45 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Lgbt Pregnancy and parenting</h3>
+        <h3 style="margin: 0px;">
+            <a href="./pregnancy_and_parenting.html">
+                Lgbt Pregnancy and parenting
+            </a>
+        </h3>
         <ol type="A">
             <li>
                 <h4 style="margin: 0px;">
-                    Queer parenting links
+                    <a href="./pregnancy_and_parenting.html#trans_and_queer_pregnancy_resources">
+                        Queer parenting links
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Can trans men get pregnant/prevention 
+                    <a href="./pregnancy_and_parenting.html#trans_masc_pregnancy">
+                        Can trans men get pregnant/prevention
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Chest feeding for trans masc & trans fem
+                    <a href="./pregnancy_and_parenting.html#chestfeeding">
+                        Chest feeding for trans masc & trans fem
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Trans parenting in media
+                    <a href="./pregnancy_and_parenting.html#trans_parenting_media">
+                        Trans parenting in media
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Parenting a trans kid
+                    <a href="./pregnancy_and_parenting.html#raising_a_trans_kid">
+                        Parenting a trans kid
+                    </a>
                 </h4>
             </li>
         </ol>
