--- a/pages/index.html
+++ b/pages/index.html
@@ -521,36 +521,52 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Trans Fem specific resources</h3>
+        <h3 style="margin: 0px;">
+            <a href="./trans_fem_resources.html">
+                Trans Fem specific resources
+            </a>
+        </h3>
         <ol type="A">
             <li>
                 <h4 style="margin: 0px;">
-                    Guides
+                    <a href="./trans_fem_resources.html#trans_fem_guides">
+                        Guides
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Hair(wigs,laser removal,etc)
+                    <a href="./trans_fem_resources.html#trans_fem_hair">
+                        Hair (wigs, laser removal, etc)
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Makeup(beginner guide)
+                    <a href="./trans_fem_resources.html#trans_fem_makeup">
+                        Makeup (beginner guide)
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Body(clothes, workouts, tucking, etc)
+                    <a href="./trans_fem_resources.html#trans_fem_body_shape">
+                        Body (clothes, workouts, tucking, etc)
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Chest(bra size guide)
+                    <a href="./trans_fem_resources.html#trans_fem_bra">
+                        Chest (bra size guide)
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Surgery & Grants for funding
+                    <a href="./trans_fem_resources.html#trans_fem_surgery">
+                        Surgery & Grants for funding
+                    </a>
                 </h4>
             </li>
         </ol>
