--- a/general_lgbt_organizations.html
+++ b/general_lgbt_organizations.html
@@ -5,6 +5,9 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Worldwide LGBT Resources</title>
 <style>
+.readable_div {
+    max-width: 120ch;
+}
 .flexbox {
     display: flex;
     justify-content: space-between;
