nonbinary linked up

--- a/nonbinary_and_intersex_resources.html
+++ b/nonbinary_and_intersex_resources.html
@@ -29,15 +29,21 @@
 </style>
     </head>
     <body>
+<h1>Nonbinary and Intersex specific resources</h1>
+
+
+<h2 id="nonbinary_and_intersex_general_resources">
+    General Resources
+</h2>
+
 <p>
-    <b>Nonbinary and Intersex specific resources:</b><br>
-    <p>
-        Resource list including Nonbinary HRT & surgery options,and many other topics.<br>
-        <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
-            https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/
-        </a>
-    </p>
-    More coming Soon….. Please suggest things to @pongo. <br>
+    Resource list including Nonbinary HRT & surgery options, and many other topics
+    <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
+        https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/
+    </a>
+</p>
+<p>
+    More coming Soon….. Please suggest things to @pongo.
 </p>
 <div style="border-style: solid; boder-width: 1%"></div>
 
