--- a/pages/index.html
+++ b/pages/index.html
@@ -58,11 +58,11 @@
             <ol type="I"> 
                 <li>
                     <!-- TODO: Syncronize menu items -->
-                        <h5 style="margin: 0px;">
-                            <a href="./social_transitioning.html#vocal_training">
-                                Trans academy voice classes
-                            </a>
-                        </h5>
+                    <h5 style="margin: 0px;">
+                        <a href="./social_transitioning.html#vocal_training">
+                            Trans academy voice classes
+                        </a>
+                    </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
@@ -572,9 +572,19 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Nonbinary & Intersex specific resources</h3>
+        <h3 style="margin: 0px;">
+            <a href="./nonbinary_and_intersex_resources.html">
+                Nonbinary & Intersex specific resources
+            </a>
+        </h3>
         <ol type="A">
-            <li><h4 style="margin: 0px;">resource guide</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./nonbinary_and_intersex_resources.html#nonbinary_and_intersex_general_resources">
+                        resource guide
+                    </a>
+                </h4>
+            </li>
             <li>(more coming soon)</li>
         </ol>
     </li>
